components/07-dsc-dsci.yaml
# There _has_ to be `status:` and there have to be conditions, otherwise the dashboard does not load
apiVersion: v1
kind: Namespace
metadata:
  name: redhat-ods-operator
