components/04-odh-dashboard.yaml
---
# https://gateway-api.sigs.k8s.io/guides/tls/
# https://istio.io/latest/docs/tasks/traffic-management/ingress/ingress-sni-passthrough/
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: rhods-dashboard
  namespace: redhat-ods-applications
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
  hostnames: [ "rhods-dashboard.127.0.0.1.sslip.io" ]
  rules:
    - backendRefs:
        - name: rhods-dashboard
          port: 8443
